--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<h1>Time and Space Complexity</h1>
+	<p>Time complexity of this method is highly efficient, ensuring quick execution.</p>
+	<p><b>Space Complexity</b> of this algorithm is O(n).</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
